--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,9 +15,12 @@
         <ListView
                 android:id="@+id/papers_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="200dp">
 
         </ListView>
+
+
+
     </LinearLayout>
 
 
