--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -10,22 +10,36 @@
         tools:context="org.gajanlee.sailors.DownloadActivity">
 
     <FrameLayout
-            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
+            <LinearLayout
+                    android:id="@+id/download_config"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                            android:text="haha"
+                            android:layout_width="wrap_content" android:layout_height="200dp"/>
+                    <Button
+                            android:id="@+id/btn_download"
+                            android:text="click"
+                            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            </LinearLayout>
 
-        <TextView
-                android:id="@+id/message"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:text="@string/title_home"/>
+        <LinearLayout
+                android:id="@+id/download_list_layout"
+                android:layout_width="match_parent" android:layout_height="200dp"
+                android:visibility="gone">
+            <ListView
+                    android:id="@+id/download_listview"
+                    android:layout_width="match_parent" android:layout_height="match_parent">
 
+            </ListView>
+        </LinearLayout>
     </FrameLayout>
+
+
+
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
@@ -33,6 +47,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="?android:attr/windowBackground"
-            app:menu="@menu/navigation"/>
+            app:menu="@menu/navigation"
+    />
+
 
 </LinearLayout>
