--- a/app/src/main/res/layout/content_preview.xml
+++ b/app/src/main/res/layout/content_preview.xml
@@ -11,8 +11,8 @@
 
     <com.github.barteksc.pdfviewer.PDFView
             android:id="@+id/pdfViewer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="368dp"
+            android:layout_height="439dp" tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp">
 
     </com.github.barteksc.pdfviewer.PDFView>
 </android.support.constraint.ConstraintLayout>
