--- a/app/src/main/res/layout/download_item.xml
+++ b/app/src/main/res/layout/download_item.xml
@@ -4,5 +4,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-
+    <TextView
+            android:id="@+id/download_url"
+            android:text="url"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+    <TextView
+            android:id="@+id/download_current"
+            android:text="current"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 </LinearLayout>
